<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="guest_name">Guest</string>
    <string name="home_name">Home</string>
    <string name="starting_score">0</string>
    <string name="starting_inning">1</string>
    <string name="count">-----</string>
    <string name="ball_button">Ball</string>
    <string name="strike_button">Strike</string>
    <string name="home_button">H Run</string>
    <string name="guest_button">G Run</string>
    <string name="reset_button">Reset</string>
    <string name="increase_inning">+</string>
    <string name="decrease_inning">-</string>
    <string name="winning_team">Winner</string>
    <string name="textview_two">Congratulations!</string>
    <string name="share_view">Share:</string>
    <string name="trophy_photo">trophy</string>
    <string name="message_icon">message icon</string>
    <string name="map_icon">map icon</string>
    <string name="phone_icon">phone icon</string>
</resources>
