<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0FBFBF9"
    tools:context=".WinnerActivity">


    <TextView
        android:id="@+id/theWinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/winning_team"
        android:textColor="#FAC219"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="254dp"
        android:layout_height="273dp"
        android:contentDescription="@string/trophy_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/theWinner"
        app:layout_constraintVertical_bias="0.525"
        app:srcCompat="@drawable/trophy" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_two"
        android:textColor="#FAC219"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.247" />

    <ImageView
        android:id="@+id/imageView_call"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/phone_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <ImageView
        android:id="@+id/imageView_text"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:contentDescription="@string/message_icon"
        app:layout_constraintStart_toStartOf="@+id/imageView_call"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@android:drawable/stat_notify_chat" />

    <ImageView
        android:id="@+id/imageView_map"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginStart="88dp"
        android:layout_marginLeft="88dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/map_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView_text"
        app:layout_constraintTop_toTopOf="@+id/imageView_text"
        app:srcCompat="@android:drawable/ic_dialog_map" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/share_view"
        android:textColor="#FAC219"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView" />

</android.support.constraint.ConstraintLayout>